--- a/ExamManager/wwwroot/css/site.css
+++ b/ExamManager/wwwroot/css/site.css
@@ -69,3 +69,13 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.centered {
+    /*background-image: url('../asset/Spin-0.8s-270px.gif');*/
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); /* for IE 9 */
+    -webkit-transform: translate(-50%, -50%); /* for Safari */
+}
